--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "cra-template": "1.2.0",
     "firebase": "^9.9.0",
     "history": "^4.10.1",
+    "html-react-parser": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-id-swiper": "^3.0.0",
     "react-redux": "^8.0.2",
     "react-router": "^5.3.3",
     "react-router-dom": "^5.3.3",
@@ -20,7 +22,8 @@
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
-    "reselect": "^4.1.6"
+    "reselect": "^4.1.6",
+    "swiper": "^5.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
